--- a/LibDialog/src/main/res/layout/mx_dialog_tip.xml
+++ b/LibDialog/src/main/res/layout/mx_dialog_tip.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/rootLay"
     android:layout_width="match_parent"
@@ -11,12 +11,11 @@
         android:id="@+id/cardLay"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
+        android:layout_gravity="center_vertical"
         android:layout_margin="25dp"
         android:soundEffectsEnabled="false"
         app:cardBackgroundColor="@color/mx_dialog_color_background"
-        app:cardCornerRadius="@dimen/mx_dialog_card_corner_radius"
-        app:cardElevation="0dp">
+        app:cardCornerRadius="@dimen/mx_dialog_card_corner_radius">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -24,16 +23,46 @@
             android:layout_gravity="center"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/titleTxv"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:padding="15dp"
-                android:text="温馨提示"
-                android:textColor="@color/mx_color_text"
-                android:textSize="@dimen/mx_size_title"
-                android:textStyle="bold" />
+                android:gravity="center_vertical"
+                android:paddingHorizontal="15dp"
+                android:paddingVertical="15dp">
+
+                <ImageView
+                    android:id="@+id/tipTypeImg"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_marginRight="2dp"
+                    android:src="@drawable/mx_dialog_icon_success"
+                    android:visibility="gone" />
+
+                <TextView
+                    android:id="@+id/titleTxv"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:singleLine="true"
+                    android:text="温馨提示"
+                    android:textColor="@color/mx_color_text"
+                    android:textSize="@dimen/mx_size_title"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/ticketTxv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:singleLine="true"
+                    android:text="2 秒后消失"
+                    android:textColor="@color/mx_color_text_ticket"
+                    android:textSize="@dimen/mx_size_small" />
+            </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/mx_dialog_color_divider" />
 
             <FrameLayout
                 android:id="@+id/contentLay"
@@ -41,7 +70,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:paddingHorizontal="15dp"
-                android:paddingBottom="15dp" />
+                android:paddingVertical="25dp" />
 
             <LinearLayout
                 android:id="@+id/btnLay"
@@ -66,4 +95,4 @@
             </LinearLayout>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
-</RelativeLayout>
+</FrameLayout>
