--- a/LibDialog/src/main/res/values/dimens.xml
+++ b/LibDialog/src/main/res/values/dimens.xml
@@ -3,4 +3,5 @@
     <dimen name="mx_size_title">17sp</dimen>
     <dimen name="mx_size_content">14sp</dimen>
     <dimen name="mx_dialog_card_corner_radius">14dp</dimen>
+    <dimen name="mx_size_small">13sp</dimen>
 </resources>
