--- a/LibDialog/src/main/res/layout/mx_dialog_tip_content.xml
+++ b/LibDialog/src/main/res/layout/mx_dialog_tip_content.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/msgTxv"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:lineSpacingExtra="5dp"
-    android:textColor="@color/mx_color_text"
-    android:textSize="@dimen/mx_size_content"
-    android:textStyle="bold" />
+    android:layout_height="wrap_content">
+
+    <TextView
+        android:id="@+id/msgTxv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:lineSpacingExtra="5dp"
+        android:textColor="@color/mx_color_text"
+        android:textSize="@dimen/mx_size_content"
+        android:textStyle="bold" />
+</ScrollView>
