--- a/LibDialog/src/main/res/layout/mx_dialog_tip_content.xml
+++ b/LibDialog/src/main/res/layout/mx_dialog_tip_content.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <TextView
@@ -8,6 +8,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:lineSpacingExtra="5dp"
+        android:paddingVertical="20dp"
         android:textColor="@color/mx_color_text"
         android:textSize="@dimen/mx_size_content"
         android:textStyle="bold" />
