MOD：增加加载中弹窗

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,6 +36,11 @@
         android:layout_height="wrap_content"
         android:onClick="showWarn"
         android:text="showWarn" />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="showLoading"
+        android:text="showLoading" />
 
 
     <Button
