--- a/LibDialog/src/main/res/values/styles.xml
+++ b/LibDialog/src/main/res/values/styles.xml
@@ -7,9 +7,9 @@
         <item name="android:windowIsTranslucent">false</item>
         <item name="android:windowFullscreen">false</item>
         <item name="android:windowNoTitle">true</item>
-        <item name="android:background">#00000000</item>
+        <item name="android:background">@android:color/transparent</item>
         <item name="android:windowBackground">@android:color/transparent</item>
-        <item name="android:backgroundDimEnabled">true</item>
+        <item name="android:backgroundDimEnabled">false</item>
     </style>
 
     <style name="mx_dialog_style_inactive_btn">
