--- a/LibDialog/src/main/res/layout/mx_dialog_loading.xml
+++ b/LibDialog/src/main/res/layout/mx_dialog_loading.xml
@@ -7,43 +7,31 @@
     android:background="@color/mx_dialog_color_background_alpha"
     android:soundEffectsEnabled="false">
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardLay"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_margin="25dp"
-        android:soundEffectsEnabled="false"
-        app:cardBackgroundColor="@color/mx_dialog_color_background"
-        app:cardCornerRadius="@dimen/mx_dialog_card_corner_radius"
-        app:cardElevation="2dp"
-        app:cardMaxElevation="2dp">
+        android:background="@drawable/mx_dialog_card_bg"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:paddingHorizontal="30dp"
+        android:paddingVertical="20dp">
 
-        <LinearLayout
-            android:layout_width="match_parent"
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:indeterminateDrawable="@drawable/mx_dialog_progress_loading"
+            android:indeterminateDuration="1000" />
+
+        <TextView
+            android:id="@+id/loadingTxv"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="vertical"
-            android:paddingHorizontal="30dp"
-            android:paddingVertical="20dp">
-
-            <ProgressBar
-                android:id="@+id/progressBar"
-                android:layout_width="45dp"
-                android:layout_height="45dp"
-                android:elevation="3dp"
-                android:indeterminateDrawable="@drawable/mx_dialog_progress_loading"
-                android:indeterminateDuration="1000" />
-
-            <TextView
-                android:id="@+id/loadingTxv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
-                android:singleLine="true"
-                android:text="正在加载中..."
-                android:textColor="@color/mx_color_text"
-                android:textSize="@dimen/mx_size_content" />
-        </LinearLayout>
-    </androidx.cardview.widget.CardView>
+            android:layout_marginTop="15dp"
+            android:singleLine="true"
+            android:text="正在加载中..."
+            android:textColor="@color/mx_color_text"
+            android:textSize="@dimen/mx_size_content" />
+    </LinearLayout>
 </FrameLayout>
