--- a/LibDialog/src/main/res/layout/mx_dialog_tip.xml
+++ b/LibDialog/src/main/res/layout/mx_dialog_tip.xml
@@ -7,94 +7,88 @@
     android:background="@color/mx_dialog_color_background_alpha"
     android:soundEffectsEnabled="false">
 
-    <androidx.cardview.widget.CardView
+
+    <LinearLayout
         android:id="@+id/cardLay"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
+        android:layout_gravity="center"
         android:layout_margin="25dp"
-        android:soundEffectsEnabled="false"
-        app:cardBackgroundColor="@color/mx_dialog_color_background"
-        app:cardCornerRadius="@dimen/mx_dialog_card_corner_radius">
+        android:background="@drawable/mx_dialog_card_bg"
+        android:orientation="vertical"
+        android:soundEffectsEnabled="false">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:orientation="vertical">
+            android:gravity="center_vertical"
+            android:paddingHorizontal="15dp"
+            android:paddingVertical="15dp">
 
-            <LinearLayout
-                android:layout_width="match_parent"
+            <ImageView
+                android:id="@+id/tipTypeImg"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_marginRight="2dp"
+                android:src="@drawable/mx_dialog_icon_success"
+                android:visibility="gone" />
+
+            <TextView
+                android:id="@+id/titleTxv"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:gravity="center_vertical"
-                android:paddingHorizontal="15dp"
-                android:paddingVertical="15dp">
-
-                <ImageView
-                    android:id="@+id/tipTypeImg"
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
-                    android:layout_marginRight="2dp"
-                    android:src="@drawable/mx_dialog_icon_success"
-                    android:visibility="gone" />
-
-                <TextView
-                    android:id="@+id/titleTxv"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:singleLine="true"
-                    android:text="温馨提示"
-                    android:textColor="@color/mx_color_text"
-                    android:textSize="@dimen/mx_size_title"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/delayTxv"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:singleLine="true"
-                    android:text="2 秒后消失"
-                    android:textColor="@color/mx_color_text_ticket"
-                    android:textSize="@dimen/mx_size_small"
-                    android:visibility="gone" />
-            </LinearLayout>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/mx_dialog_color_divider" />
-
-            <FrameLayout
-                android:id="@+id/contentLay"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
                 android:layout_weight="1"
-                android:orientation="vertical"
-                android:paddingHorizontal="15dp"
-                android:paddingVertical="10dp" />
+                android:singleLine="true"
+                android:text="温馨提示"
+                android:textColor="@color/mx_color_text"
+                android:textSize="@dimen/mx_size_title"
+                android:textStyle="bold" />
 
-            <LinearLayout
-                android:id="@+id/btnLay"
-                android:layout_width="match_parent"
+            <TextView
+                android:id="@+id/delayTxv"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@color/mx_color_btn_bg"
-                android:divider="@drawable/mx_dialog_divider_space"
-                android:paddingHorizontal="20dp"
-                android:paddingVertical="12dp"
-                android:showDividers="middle"
-                android:visibility="invisible">
-
-                <TextView
-                    android:id="@+id/cancelBtn"
-                    style="@style/mx_dialog_style_inactive_btn"
-                    android:text="取消" />
-
-                <TextView
-                    android:id="@+id/okBtn"
-                    style="@style/mx_dialog_style_active_btn"
-                    android:text="确认" />
-            </LinearLayout>
+                android:singleLine="true"
+                android:text="2 秒后消失"
+                android:textColor="@color/mx_color_text_ticket"
+                android:textSize="@dimen/mx_size_small"
+                android:visibility="gone" />
         </LinearLayout>
-    </androidx.cardview.widget.CardView>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/mx_dialog_color_divider" />
+
+        <FrameLayout
+            android:id="@+id/contentLay"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:paddingHorizontal="15dp"
+            android:paddingVertical="10dp" />
+
+        <LinearLayout
+            android:id="@+id/btnLay"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/mx_dialog_btn_bg"
+            android:divider="@drawable/mx_dialog_divider_space"
+            android:paddingHorizontal="20dp"
+            android:paddingVertical="12dp"
+            android:showDividers="middle"
+            android:visibility="invisible">
+
+            <TextView
+                android:id="@+id/cancelBtn"
+                style="@style/mx_dialog_style_inactive_btn"
+                android:text="取消" />
+
+            <TextView
+                android:id="@+id/okBtn"
+                style="@style/mx_dialog_style_active_btn"
+                android:text="确认" />
+        </LinearLayout>
+    </LinearLayout>
 </FrameLayout>
