--- a/LibDialog/src/main/res/values/dimens.xml
+++ b/LibDialog/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="mx_size_content">14sp</dimen>
     <dimen name="mx_dialog_card_corner_radius">14dp</dimen>
     <dimen name="mx_size_small">13sp</dimen>
+    <dimen name="mx_dialog_progress_img_size">45dp</dimen>
 </resources>
