--- a/app/src/main/res/layout/activity_tip_dialog.xml
+++ b/app/src/main/res/layout/activity_tip_dialog.xml
@@ -85,6 +85,11 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="圆角半径：" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="背景颜色：" />
 
         <RadioGroup
