--- a/LibDialog/src/main/res/layout/mx_dialog_tip.xml
+++ b/LibDialog/src/main/res/layout/mx_dialog_tip.xml
@@ -76,12 +76,12 @@
             <TextView
                 android:id="@+id/cancelBtn"
                 style="@style/mx_dialog_style_inactive_btn"
+                android:layout_marginRight="@dimen/mx_size_divider_space"
                 android:text="取消" />
 
             <TextView
                 android:id="@+id/okBtn"
                 style="@style/mx_dialog_style_active_btn"
-                android:layout_marginLeft="@dimen/mx_size_divider_space"
                 android:text="确认" />
         </LinearLayout>
     </LinearLayout>
