--- a/LibDialog/src/main/res/values/dimens.xml
+++ b/LibDialog/src/main/res/values/dimens.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="mx_size_title">17sp</dimen>
-    <dimen name="mx_size_content">14sp</dimen>
+    <dimen name="mx_size_content">15sp</dimen>
+    <dimen name="mx_size_button">15sp</dimen>
     <dimen name="mx_dialog_card_corner_radius">14dp</dimen>
     <dimen name="mx_size_small">13sp</dimen>
     <dimen name="mx_dialog_progress_img_size">45dp</dimen>
