--- a/LibDialog/src/main/res/layout/mx_dialog_loading.xml
+++ b/LibDialog/src/main/res/layout/mx_dialog_loading.xml
@@ -32,6 +32,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
+            android:gravity="center"
+            android:minEms="5"
             android:singleLine="true"
             android:text="正在加载中..."
             android:textColor="@color/mx_color_text"
