--- a/LibDialog/src/main/res/layout/mx_content_tip_textview.xml
+++ b/LibDialog/src/main/res/layout/mx_content_tip_textview.xml
@@ -9,8 +9,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:lineSpacingExtra="5dp"
-        android:paddingVertical="10dp"
+        android:paddingHorizontal="25dp"
+        android:paddingVertical="20dp"
+        android:text="测试"
         android:textColor="@color/mx_color_text"
-        android:textSize="@dimen/mx_size_content"
-        android:textStyle="bold" />
+        android:textSize="@dimen/mx_size_content" />
 </ScrollView>
