--- a/LibDialog/src/main/res/drawable/mx_dialog_bg_active_round_btn.xml
+++ b/LibDialog/src/main/res/drawable/mx_dialog_bg_active_round_btn.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <corners android:radius="100dp" />
-    <stroke
-        android:width="1dp"
-        android:color="@color/mx_dialog_color_border" />
+     <solid android:color="@color/mx_color_focus" />
 </shape>
