--- a/LibDialog/src/main/res/drawable/mx_dialog_bg_inactive_round_btn.xml
+++ b/LibDialog/src/main/res/drawable/mx_dialog_bg_inactive_round_btn.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <corners android:radius="100dp" />
-    <solid android:color="@color/mx_color_focus" />
+    <solid android:color="#11aaaaaa" />
+    <stroke
+        android:width="1dp"
+        android:color="@color/mx_dialog_color_border" />
 </shape>
