--- a/LibDialog/src/main/res/values/colors.xml
+++ b/LibDialog/src/main/res/values/colors.xml
@@ -4,12 +4,11 @@
     <color name="mx_dialog_color_background">#ffffff</color>
     <color name="mx_dialog_color_divider">#11666666</color>
     <color name="mx_dialog_color_border">#DEDEDE</color>
-    <color name="mx_color_focus">#00C157</color>
+    <color name="mx_color_focus">#008EFF</color>
 
     <color name="mx_color_text_inactive">#666666</color>
     <color name="mx_color_text_ticket">#666666</color>
     <color name="mx_color_text">#333333</color>
     <color name="mx_color_text_focus">#ffffff</color>
-    <color name="mx_color_btn_bg">#11aaaaaa</color>
     <color name="mx_color_snack_bg">#333333</color>
 </resources>
