--- a/app/src/main/res/layout/activity_tip_dialog.xml
+++ b/app/src/main/res/layout/activity_tip_dialog.xml
@@ -87,6 +87,18 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="内容 高/宽" />
+
+        <EditText
+            android:id="@+id/widthRatioEdt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="numberDecimal"
+            android:text="0.5" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="背景颜色：" />
 
         <RadioGroup
