--- a/LibDialog/src/main/res/values/dimens.xml
+++ b/LibDialog/src/main/res/values/dimens.xml
@@ -7,4 +7,6 @@
     <dimen name="mx_size_small">13sp</dimen>
     <dimen name="mx_dialog_progress_img_size">45dp</dimen>
     <dimen name="mx_size_divider_space">12dp</dimen>
+    <dimen name="mx_list_item_height">52dp</dimen>
+    <dimen name="mx_list_card_corner_radius">8dp</dimen>
 </resources>
