--- a/LibDialog/src/main/res/values/styles.xml
+++ b/LibDialog/src/main/res/values/styles.xml
@@ -24,8 +24,8 @@
         <item name="android:layout_weight">1</item>
         <item name="android:background">@drawable/mx_dialog_bg_inactive_round_btn</item>
         <item name="android:gravity">center</item>
-        <item name="android:textColor">@color/mx_color_text_inactive</item>
-        <item name="android:textSize">@dimen/mx_size_button</item>
+        <item name="android:textColor">@color/mx_dialog_color_text_inactive</item>
+        <item name="android:textSize">@dimen/mx_dialog_text_size_button</item>
         <item name="android:textStyle">bold</item>
     </style>
 
@@ -35,8 +35,8 @@
         <item name="android:layout_weight">1</item>
         <item name="android:background">@drawable/mx_dialog_bg_active_round_btn</item>
         <item name="android:gravity">center</item>
-        <item name="android:textColor">@color/mx_color_text_focus</item>
-        <item name="android:textSize">@dimen/mx_size_button</item>
+        <item name="android:textColor">@color/mx_dialog_color_text_focus</item>
+        <item name="android:textSize">@dimen/mx_dialog_text_size_button</item>
         <item name="android:textStyle">bold</item>
     </style>
 
