--- a/LibDialog/src/main/res/layout/mx_dialog_list_item.xml
+++ b/LibDialog/src/main/res/layout/mx_dialog_list_item.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/mx_list_item_height"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <TextView
         android:id="@+id/infoTxv"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:ellipsize="end"
         android:gravity="center"
+        android:paddingHorizontal="@dimen/mx_dialog_size_divider_space"
         android:singleLine="true"
-        android:textColor="@color/mx_color_text"
-        android:textSize="@dimen/mx_size_content" />
+        android:textColor="@color/mx_dialog_color_text"
+        android:textSize="@dimen/mx_dialog_text_size_content" />
 </LinearLayout>
