--- a/LibDialog/src/main/res/values/colors.xml
+++ b/LibDialog/src/main/res/values/colors.xml
@@ -5,9 +5,10 @@
     <color name="mx_dialog_color_background">#ffffff</color>
     <color name="mx_dialog_color_divider">#11666666</color>
     <color name="mx_dialog_color_border">#DEDEDE</color>
+    <color name="mx_dialog_color_un_focus">#ffffff</color>
     <color name="mx_dialog_color_focus">#008EFF</color>
 
-    <color name="mx_dialog_color_text_inactive">#666666</color>
+    <color name="mx_dialog_color_text_cancel">#333333</color>
     <color name="mx_dialog_color_text_ticket">#666666</color>
     <color name="mx_dialog_color_text">#333333</color>
     <color name="mx_dialog_color_text_focus">#ffffff</color>
