--- a/LibDialog/src/main/res/drawable/mx_dialog_btn_bg_cancel_corner.xml
+++ b/LibDialog/src/main/res/drawable/mx_dialog_btn_bg_cancel_corner.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <corners android:radius="100dp" />
-    <solid android:color="#11aaaaaa" />
+    <corners android:radius="@dimen/mx_dialog_size_card_corner_radius" />
+    <solid android:color="@color/mx_dialog_color_un_focus" />
     <stroke
         android:width="1dp"
         android:color="@color/mx_dialog_color_border" />
