--- a/LibDialog/src/main/res/layout/mx_content_tip.xml
+++ b/LibDialog/src/main/res/layout/mx_content_tip.xml
@@ -70,13 +70,15 @@
 
         <TextView
             android:id="@+id/cancelBtn"
-            style="@style/mx_dialog_style_inactive_btn"
+            style="@style/mx_dialog_style_cancel_btn"
             android:layout_marginRight="@dimen/mx_dialog_size_divider_space"
-            android:text="取消" />
+            android:background="@drawable/mx_dialog_btn_bg_cancel_circular"
+            android:text="@string/mx_dialog_button_cancel_text" />
 
         <TextView
             android:id="@+id/okBtn"
             style="@style/mx_dialog_style_active_btn"
-            android:text="确认" />
+            android:background="@drawable/mx_dialog_btn_bg_action_circular"
+            android:text="@string/mx_dialog_button_action_text" />
     </LinearLayout>
 </LinearLayout>
