MOD：按钮圆角跟随背景

--- a/LibDialog/src/main/res/layout/mx_dialog_list_item.xml
+++ b/LibDialog/src/main/res/layout/mx_dialog_list_item.xml
@@ -22,5 +22,6 @@
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_marginHorizontal="@dimen/mx_dialog_size_divider_space"
-        android:src="@drawable/mx_dialog_icon_unselect" />
+        android:src="@drawable/mx_dialog_icon_unselect"
+        android:visibility="gone" />
 </LinearLayout>
