--- a/LibDialog/src/main/res/values/dimens.xml
+++ b/LibDialog/src/main/res/values/dimens.xml
@@ -8,4 +8,5 @@
     <dimen name="mx_dialog_size_progress_img">45dp</dimen>
     <dimen name="mx_dialog_size_divider_space">12dp</dimen>
     <dimen name="mx_dialog_size_list_item_height">52dp</dimen>
+    <dimen name="mx_dialog_size_action_height">45dp</dimen>
 </resources>
