--- a/LibDialog/src/main/res/layout/mx_dialog_list.xml
+++ b/LibDialog/src/main/res/layout/mx_dialog_list.xml
@@ -16,17 +16,29 @@
         android:background="@drawable/mx_dialog_card_bg"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/titleTxv"
+        <LinearLayout
+            android:id="@+id/titleLay"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/mx_dialog_size_list_item_height"
-            android:ellipsize="end"
-            android:gravity="center"
-            android:singleLine="true"
-            android:text="请选择"
-            android:textColor="@color/mx_dialog_color_text"
-            android:textSize="@dimen/mx_dialog_text_size_title"
-            android:visibility="gone" />
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:visibility="gone">
+
+            <TextView
+                android:id="@+id/titleTxv"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/mx_dialog_size_list_item_height"
+                android:ellipsize="end"
+                android:gravity="center"
+                android:singleLine="true"
+                android:text="请选择"
+                android:textColor="@color/mx_dialog_color_text"
+                android:textSize="@dimen/mx_dialog_text_size_title" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/mx_dialog_color_divider" />
+        </LinearLayout>
 
         <com.mx.dialog.views.MXRatioFrameLayout
             android:id="@+id/contentLay"
