--- a/LibDialog/src/main/res/layout/mx_dialog_list_item.xml
+++ b/LibDialog/src/main/res/layout/mx_dialog_list_item.xml
@@ -18,6 +18,7 @@
         android:focusable="false"
         android:focusableInTouchMode="false"
         android:gravity="center"
+        android:minHeight="@dimen/mx_dialog_size_list_item_height"
         android:paddingHorizontal="@dimen/mx_dialog_size_divider_space"
         android:singleLine="true"
         android:textColor="@color/mx_dialog_color_text"
