MOD：增加Tip按钮样式

--- a/app/src/main/res/layout/activity_tip_dialog.xml
+++ b/app/src/main/res/layout/activity_tip_dialog.xml
@@ -156,5 +156,34 @@
                 android:layout_height="wrap_content"
                 android:text="ERROR" />
         </RadioGroup>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Button：" />
+
+        <RadioGroup
+            android:id="@+id/actionGroup"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <RadioButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="ROUND" />
+
+            <RadioButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="FILL" />
+
+            <RadioButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="FILL_EMPTY" />
+
+        </RadioGroup>
     </LinearLayout>
 </ScrollView>
