--- a/LibDialog/src/main/res/layout/mx_content_tip.xml
+++ b/LibDialog/src/main/res/layout/mx_content_tip.xml
@@ -52,8 +52,7 @@
     <com.mx.dialog.views.MXRatioFrameLayout
         android:id="@+id/contentLay"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_height="wrap_content"
         android:orientation="vertical" />
 
     <View
@@ -71,9 +70,16 @@
         <TextView
             android:id="@+id/cancelBtn"
             style="@style/mx_dialog_style_cancel_btn"
-            android:layout_marginRight="@dimen/mx_dialog_size_divider_space"
             android:background="@drawable/mx_dialog_btn_bg_cancel_circular"
             android:text="@string/mx_dialog_button_cancel_text" />
+
+        <View
+            android:id="@+id/btnDivider"
+            android:layout_width="1dp"
+            android:layout_height="match_parent"
+            android:layout_marginHorizontal="6dp"
+            android:background="@color/mx_dialog_color_divider"
+            android:visibility="invisible" />
 
         <TextView
             android:id="@+id/okBtn"
