--- a/app/src/main/res/layout/activity_tip_dialog.xml
+++ b/app/src/main/res/layout/activity_tip_dialog.xml
@@ -160,7 +160,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Button：" />
+            android:text="Button Style：" />
 
         <RadioGroup
             android:id="@+id/actionGroup"
@@ -172,17 +172,17 @@
             <RadioButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="ROUND" />
+                android:text="Rounded" />
 
             <RadioButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="FILL" />
+                android:text="FillBackground" />
 
             <RadioButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="FILL_EMPTY" />
+                android:text="ActionFocus" />
 
         </RadioGroup>
     </LinearLayout>
