--- a/LibDialog/src/main/res/layout/mx_dialog_list.xml
+++ b/LibDialog/src/main/res/layout/mx_dialog_list.xml
@@ -62,7 +62,9 @@
         android:id="@+id/btnLay"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/mx_dialog_size_divider_space">
+        android:layout_marginTop="@dimen/mx_dialog_size_divider_space"
+        android:divider="@drawable/mx_dialog_divider"
+        android:showDividers="middle">
 
         <TextView
             android:id="@+id/cancelBtn"
@@ -75,7 +77,6 @@
             android:id="@+id/okBtn"
             style="@style/mx_dialog_style_active_btn"
             android:layout_height="@dimen/mx_dialog_size_action_height"
-            android:layout_marginLeft="@dimen/mx_dialog_size_divider_space"
             android:background="@drawable/mx_dialog_btn_bg_action_corner"
             android:text="@string/mx_dialog_button_action_text"
             android:visibility="gone" />
